--- a/index.html
+++ b/index.html
@@ -2905,7 +2905,13 @@ function atualizarRelogio() {
 setInterval(atualizarRelogio, 1000);
 atualizarRelogio();
 
+    const userPassInput = document.getElementById("userPass");
 
+    userPassInput.addEventListener("keydown", function(event) {
+      if (event.key === "Enter") {
+        login();
+      }
+    });
 </script>
 </body>
 </html>
