--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <meta charset="utf-8"/>
+ <meta http-equiv="Cache-Control" content="no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
   <title>Smamus 3D - Sistema Inteligente de Estacionamento</title>
   <script src="https://cdn.babylonjs.com/babylon.js"></script>
   <script src="https://cdn.babylonjs.com/gui/babylon.gui.min.js"></script>
@@ -966,6 +969,20 @@
       backdrop-filter: blur(10px);
     }
 
+}
+/* === Desativa blur e backdrop-filter apenas no iPhone === */
+@supports (-webkit-touch-callout: none) {
+  .glass-panel {
+    background: rgba(0, 68, 5, 0.95) !important;
+    backdrop-filter: none !important;
+    -webkit-backdrop-filter: none !important;
+  }
+}
+@supports (-webkit-touch-callout: none) {
+  .glass-panel {
+    backdrop-filter: none !important;
+    -webkit-backdrop-filter: none !important;
+  }
 }
 
 
